--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -6,12 +6,28 @@
 
 /* 左側エリア（検索・並び替え） */
 .sidebar {
-    width: 20%;
+    width: 15%;
+    padding: 20px;
 }
 
-.search-box,
-.sort-box {
+.search-box {
+    width: 100%;
+    border-radius: 10px;
     margin-bottom: 20px;
+}
+
+.sort-box {
+    width: 40%;
+    margin-bottom: 20px;
+}
+
+.search-btn {
+    width: 70%;
+    padding: 8px 12px;
+    background-color: #bfd736;
+    border-radius: 5px;
+    border: none;
+
 }
 
 /* 右側エリア */
@@ -28,8 +44,8 @@
 .add-btn {
     display: inline-block;
     padding: 8px 12px;
-    background-color: #ffc107;
-    color: #fff;
+    background-color: #dca80b;
+    color: #000;
     border-radius: 5px;
     text-decoration: none;
     font-size: 14px;
