商品登録画面修正

--- a/src/public/css/create.css
+++ b/src/public/css/create.css
@@ -67,6 +67,13 @@ label {
     color: #555;
 }
 
+/* 複数選択可のスタイル */
+.optional {
+    font-size: 10px;
+    color: red;
+    margin-left: 5px;
+}
+
 /* ボタンエリア */
 .form-actions {
     display: flex;
